# AwsTerraform

./: README.md
.github/workflows/: format_check.yaml
applications/a-sagemaker-test/: .gitignore  pyproject.toml
applications/a-sagemaker-test/notebooks/: sagemaker_cifar10_train.ipynb
applications/a-sagemaker-test/src/: cifar10.py
provision/terraform/: .gitignore
provision/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
provision/terraform/modules/s3/: main.tf  variables.tf  versions.tf
provision/terraform/modules/sagemaker/: main.tf  variables.tf
provision/terraform/modules/singleton/: versions.tf
provision/terraform/modules/vpc/: main.tf  variables.tf
provision/terraform/projects/: common.tfvars  terragrunt.hcl
provision/terraform/projects/a-sagemaker-test/: main.tf  terragrunt.hcl  variables.tf
provision/terraform/projects/b-eks-test/vpc/: .terraform.lock.hcl  terraform.tfvars  terragrunt.hcl
provision/terraform/projects/singleton/: terragrunt.hcl
